--- a/components/style/core/_slide.scss
+++ b/components/style/core/_slide.scss
@@ -3,22 +3,29 @@
 @mixin slide-motion(
   $className,
   $keyframeName,
-  $duration: var(--adui-motion-duration-bounce)
+  $duration: var(--adui-motion-duration-base),
+  $ease: var(--adui-motion-ease-base)
 ) {
   @include make-motion($className, $keyframeName, $duration);
   .#{$className}-enter,
   .#{$className}-appear {
     opacity: 0;
-    animation-timing-function: var(--adui-motion-ease-bounce);
+    animation-timing-function: $ease;
     backface-visibility: hidden;
   }
   .#{$className}-leave {
-    animation-timing-function: var(--adui-motion-ease-bounce);
+    animation-timing-function: $ease;
     backface-visibility: hidden;
   }
 }
 
 @include slide-motion(slide-up, slideUp);
+@include slide-motion(
+  slide-up-bounce,
+  slideUp,
+  var(--adui-motion-duration-bounce),
+  var(--adui-motion-ease-bounce)
+);
 @include slide-motion(slide-down, slideDown);
 @include slide-motion(slide-left, slideLeft);
 @include slide-motion(slide-right, slideRight);
