--- a/components/style/core/_zoom.scss
+++ b/components/style/core/_zoom.scss
@@ -3,27 +3,39 @@
 @mixin zoom(
   $className,
   $keyframeName,
-  $duration: var(--adui-motion-duration-bounce)
+  $duration: var(--adui-motion-duration-base),
+  $ease: var(--adui-motion-ease-base)
 ) {
   @include make-motion($className, $keyframeName, $duration);
   .#{$className}-enter,
   .#{$className}-appear {
     transform: scale(0);
-    animation-timing-function: var(--adui-motion-ease-bounce);
+    animation-timing-function: $ease;
 
     &-prepare {
       transform: none;
     }
   }
   .#{$className}-leave {
-    animation-timing-function: var(--adui-motion-ease-bounce);
+    animation-timing-function: $ease;
   }
 }
 
 @include zoom(zoom, wxadZoom);
 
-// Tooltip
-@include zoom(zoom-big-fast, wxadZoomBig, var(--adui-motion-duration-bounce));
+@include zoom(
+  zoom-big-bounce,
+  wxadZoomBig,
+  var(--adui-motion-duration-bounce),
+  var(--adui-motion-ease-bounce)
+);
+
+@include zoom(
+  zoom-big,
+  wxadZoomBig,
+  var(--adui-motion-duration-base),
+  var(--adui-motion-ease-base)
+);
 
 @keyframes wxadZoomIn {
   0% {
