--- a/site/theme/template/Layout/site.scss
+++ b/site/theme/template/Layout/site.scss
@@ -16,6 +16,11 @@
   font-style: normal;
   font-weight: 500;
 }
+
+:root {
+  --primary-color: rgba(41, 107, 239, 1);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu,
