--- a/components/checkbox/style/_tokens.scss
+++ b/components/checkbox/style/_tokens.scss
@@ -1,3 +1,9 @@
+/**
+ * _tokens.scss 规定为该组件的变量文件
+ * 1. 名称需为 _tokens.scss 且放置于 style 目录下
+ * 2. 该文件中的变量会被脚本自动解析，展示到官网的 API 文档中
+ * 3. 每个变量需以 --adui- 开头，且需有注释，注释会作为该变量的描述展示到 API 文档中
+ */
 :root {
   // 背景颜色
   --adui-checkbox-bg: var(--gray-0);
