--- a/components/alert/style/_alert.scss
+++ b/components/alert/style/_alert.scss
@@ -5,6 +5,10 @@ $prefix: "adui-alert";
     position: relative;
     padding-left: 12px;
     padding-right: 12px;
+    transition: all var(--adui-motion-duration-base)
+        var(--adui-motion-ease-base) 50ms,
+      opacity calc(var(--adui-motion-duration-base) - 100ms)
+        var(--adui-motion-ease-base);
 
     &::before,
     &::after {
@@ -51,7 +55,8 @@ $prefix: "adui-alert";
   &-close {
     flex: none;
     margin-left: 12px;
-    transition: all var(--motion-duration-base) var(--ease-in-out);
+    transition: all var(--adui-motion-duration-base)
+      var(--adui-motion-ease-base);
   }
   &-closeIcon {
     fill: currentColor;
@@ -86,7 +91,8 @@ $prefix: "adui-alert";
     padding-top: 8px;
     color: var(--gray-800);
     cursor: pointer;
-    transition: all var(--motion-duration-base) var(--ease-in-out);
+    transition: all var(--adui-motion-duration-base)
+      var(--adui-motion-ease-base);
 
     &:hover {
       color: var(--gray-900);
