--- a/components/pagination/style/_pagination.scss
+++ b/components/pagination/style/_pagination.scss
@@ -20,38 +20,61 @@ $prefix: "adui-pagination";
   &-input {
     margin-left: 16px;
     margin-right: 8px;
-    width: 48px;
   }
   &-large {
     font-size: var(--font-size-large);
 
-    .#{$prefix}-text {
-      margin-left: 12px;
-      margin-right: 12px;
+    .#{$prefix} {
+      &-text {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+      &-input {
+        width: 64px;
+      }
     }
   }
   &-medium {
     font-size: var(--font-size-medium);
 
-    .#{$prefix}-text {
-      margin-left: 12px;
-      margin-right: 12px;
+    .#{$prefix} {
+      &-text {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+      &-input {
+        width: 54px;
+      }
     }
   }
   &-small {
     font-size: var(--font-size-small);
 
-    .#{$prefix}-text {
-      margin-left: 12px;
-      margin-right: 12px;
+    .#{$prefix} {
+      &-text {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+      &-input {
+        width: 46px;
+      }
     }
   }
   &-mini {
     font-size: var(--font-size-mini);
 
-    .#{$prefix}-text {
-      margin-left: 8px;
-      margin-right: 8px;
+    .#{$prefix} {
+      &-text {
+        margin-left: 8px;
+        margin-right: 8px;
+      }
+
+      &-input {
+        width: 40px;
+      }
     }
   }
 }
