--- a/components/drawer/style/_drawer.scss
+++ b/components/drawer/style/_drawer.scss
@@ -116,14 +116,17 @@ $prefix: "adui-drawer";
 
   &-left {
     left: 0;
+    border-radius: 0 10px 10px 0;
   }
 
   &-right {
     right: 0;
+    border-radius: 10px 0 0 10px;
   }
 
   &-top {
     top: 0;
+    border-radius: 0 0 10px 10px;
   }
 
   &-left,
@@ -134,6 +137,7 @@ $prefix: "adui-drawer";
 
   &-bottom {
     bottom: 0;
+    border-radius: 10px 10px 0 0;
   }
 
   // React Animation 相关
@@ -144,33 +148,33 @@ $prefix: "adui-drawer";
   &-mask-appear.#{$prefix}-mask-appear-active,
   &-mask-enter.#{$prefix}-mask-enter-active {
     opacity: 1;
-    transition: all var(--motion-duration-base) var(--ease-out);
+    transition: opacity 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-mask-leave {
     opacity: 1;
   }
   &-mask-leave.#{$prefix}-mask-leave-active {
     opacity: 0;
-    transition: all var(--motion-duration-base) var(--ease-in);
+    transition: opacity 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-top-appear,
   &-top-enter {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(0, -100%, 0);
   }
   &-right-appear,
   &-right-enter {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(100%, 0, 0);
   }
   &-bottom-appear,
   &-bottom-enter {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(0, 100%, 0);
   }
   &-left-appear,
   &-left-enter {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(-100%, 0, 0);
   }
   &-top-appear.#{$prefix}-top-appear-active,
@@ -183,7 +187,7 @@ $prefix: "adui-drawer";
   &-left-enter.#{$prefix}-left-enter-active {
     opacity: 1;
     transform: translate3d(0, 0, 0);
-    transition: all var(--motion-duration-slow) var(--ease-out);
+    transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-top-leave,
   &-right-leave,
@@ -193,23 +197,23 @@ $prefix: "adui-drawer";
     transform: translate3d(0, 0, 0);
   }
   &-top-leave.#{$prefix}-top-leave-active {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(0, -100%, 0);
-    transition: all var(--motion-duration-base) var(--ease-in);
+    transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-right-leave.#{$prefix}-right-leave-active {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(100%, 0, 0);
-    transition: all var(--motion-duration-base) var(--ease-in);
+    transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-bottom-leave.#{$prefix}-bottom-leave-active {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(0, 100%, 0);
-    transition: all var(--motion-duration-base) var(--ease-in);
+    transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
   &-left-leave.#{$prefix}-left-leave-active {
-    opacity: 0.5;
+    opacity: 1;
     transform: translate3d(-100%, 0, 0);
-    transition: all var(--motion-duration-base) var(--ease-in);
+    transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
   }
 }
