--- a/site/theme/template/Layout/site.scss
+++ b/site/theme/template/Layout/site.scss
@@ -81,40 +81,47 @@ body {
     "Microsoft YaHei UI", "Microsoft YaHei", "Source Han Sans CN", sans-serif;
 }
 
+html,
 body {
-  overflow: overlay;
-
-  &::-webkit-scrollbar {
-    width: 14px;
-    height: 14px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    min-width: 14px;
-    min-height: 14px;
-    background-color: rgba(0, 0, 0, 0.15);
-    background-clip: content-box;
-    border: 4px solid transparent;
-    border-radius: 14px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0);
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-
-  &::-webkit-scrollbar-thumb:active {
-    background-color: rgba(0, 0, 0, 0.65);
-  }
-  &::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0);
-  }
+  overflow: hidden;
 }
 
 :global {
+  #react-content {
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      min-width: 15px;
+      min-height: 15px;
+      background-color: rgba(0, 0, 0, 0.15);
+      background-clip: content-box;
+      border: 4px solid transparent;
+      border-radius: 15px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+      background-color: rgba(0, 0, 0, 0.65);
+    }
+    &::-webkit-scrollbar-track {
+      background-color: rgba(0, 0, 0, 0);
+    }
+  }
+
   #nprogress .bar {
     height: 3px !important;
     background: var(--primary-color) !important;
@@ -298,7 +305,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 1440px;
-    min-width: 840px;
+    min-width: 720px;
     width: 90%;
   }
 }
@@ -313,7 +320,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 1440px;
-    min-width: 840px;
+    min-width: 720px;
   }
 
   svg {
@@ -407,11 +414,11 @@ body {
   }
 
   .main {
-    padding: 120px 32px 160px;
+    padding: 120px 12px 160px;
     max-width: 100%;
   }
 
   .footer {
-    padding: 56px 32px;
+    padding: 56px 12px;
   }
 }
