--- a/components/dialog/style/_dialog.scss
+++ b/components/dialog/style/_dialog.scss
@@ -145,7 +145,8 @@ $prefix: "adui-dialog";
   &-leave.#{$prefix}-leave-active {
     opacity: 0;
     transform: scale(0.8) translate3d(0, 20px, 0);
-    transition: all 0.2s var(--adui-motion-ease-base);
+    transition: all var(--adui-motion-duration-base)
+      var(--adui-motion-ease-base);
   }
 
   &-mask-appear,
@@ -166,6 +167,7 @@ $prefix: "adui-dialog";
 
   &-mask-leave.#{$prefix}-mask-leave-active {
     opacity: 0;
-    transition: all 0.2s var(--adui-motion-ease-base);
+    transition: all var(--adui-motion-duration-base)
+      var(--adui-motion-ease-base);
   }
 }
